# triads

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  COMPLEXITY_REPORT.md  CONTRIBUTING.md  CORRUPTION_PREVENTION_REPORT.md  DOCUMENTATION_UPDATE_v0.7.0-alpha.7.md  FINAL_PHASE_SUMMARY.md  GITHUB_RELEASE_v0.8.0-alpha.4.md  GITHUB_RELEASE_v0.8.0-alpha.5.md  GITHUB_RELEASE_v0.8.0-alpha.6.md  IMPLEMENTATION_PHASES_4-6_COMPLETE.md  INSTALL_PLUGIN.sh  LAUNCH_READY.md  LICENSE  MARKETPLACE_SETUP.md  PHASE1_KNOWLEDGE_UPDATE.md  PHASE_2_VERIFICATION.md  PLUGIN_CONVERSION_SUMMARY.md  PRUNING_REPORT_PHASE2.md  PRUNING_REPORT_TASK_2_4.md  PRUNING_REPORT_WORKFLOW_ENFORCEMENT.md  QUALITY_GATE_REPORT_v0.7.0.md  README.md  README_PLUGIN.md  REFACTORING_PROGRESS.md  RELEASE_GUIDE.md  RELEASE_NOTES_v0.2.0.md  RELEASE_NOTES_v0.3.0.md  RELEASE_NOTES_v0.6.0.md  RELEASE_NOTES_v0.7.0_PROPOSED.md  RELEASE_NOTES_v0.9.0-alpha.1.md  ROUTING.md  SPEC-KIT_INTEGRATION.md  TASK_3_COMPLETION_SUMMARY.md  TEST_REPORT.md  TEST_REPORT_PHASE1.md  (+18 more)
.claude/: NATURAL_ROUTING_TEST.md  PHASE_5_COMPLETION.md  README.md  USER_MEMORY.md  WORKFLOW.md  experience_state.json  routing_decision_table.yaml  settings.json
.claude-plugin/: marketplace.json  plugin.json
.github/: MAINTAINERS.md  PULL_REQUEST_TEMPLATE.md
commands/: fix-agents.md  generate-triads.md  knowledge-help.md  knowledge-status.md  workflows.md
docs/: AGENT_UPGRADES.md  ANALYSIS_MCP_MAPPING.md  ARCHITECTURE.md  ARCHITECTURE_DECISIONS.md  CLAUDE_CODE_HOOKS_GUIDE.md  CLAUDE_CODE_HOOKS_MARKETING.md  EXAMPLES.md  (+57 more)
(+463 files in other folders)
